--- a/docs/cs-basics/operating-system/操作系统常见面试题&知识点总结.md
+++ b/docs/cs-basics/operating-system/操作系统常见面试题&知识点总结.md
@@ -240,6 +240,8 @@ tag:
 
 🙋 **我** ：这部分我真不清楚！
 
+[稀土掘金内存管理](https://juejin.cn/post/6955114520834474014)
+
 于是面试完之后我默默去查阅了相关文档！留下了没有技术的泪水。。。
 
 > 这部分内容参考了 Microsoft 官网的介绍，地址：<https://docs.microsoft.com/zh-cn/windows-hardware/drivers/gettingstarted/virtual-address-spaces?redirectedfrom=MSDN>
